# jmstokes

./: .gitignore  Makefile  README.md  mc_example.py  muellerCalculus.py  pyproject.toml  setup.cfg  test2.ipynb  test2.py
example/: StokesAnalysis.ipynb  mc_example.py  mc_example2.py  test2.py
example/StepIndexFiber/: README.md  ex1.ipynb  ex_HE1.py  ex_TM.py
jmstokes/: __init__.py  stokes_analysis.py
src/jmstokes/: __init__.py  stokes_analysis.py
