# metadataセクションではパッケージのメタデータを定義する
# これらの値はpypiで公開した際に表示される。
# なおversion等、一部のキーはディレクティブの指定により外部ファイルから値を取得することができる
# https://setuptools.readthedocs.io/en/latest/setuptools.html#metadata
[metadata]
name = jmstokes
version = 0.0.1
description = Stokes analysis and Mueller Calculus
long_description = file: README.md
long_description_content_type = text/markdown
license = 
author = Junichi Motohisa
author_email = jmotohisa@ist.hokudai.ac.jp
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.8

# optionsセクションではパッケージの依存関係やpip installした時の動作を定義する
# 値が複数ある場合、インデントすることで1行に1つの値を書くことができる。
# https://setuptools.readthedocs.io/en/latest/setuptools.html#options
[options]
install_requires =
    numpy
    scipy
    matplotlib
